samples/_failures_safe/1761518330_64bcd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a443e6e1.c: In function ‘main’:
./samples/SAFE/__tmp_a443e6e1.c:158:5: error: expected declaration or statement at end of input
  158 |     free(result);
      |     ^~~~
